--- a/content/1-history/3.md
+++ b/content/1-history/3.md
@@ -61,7 +61,9 @@ The more recent part of the literature review, through the 1970s, was easier, as
 
 Examination of the thesis painting, the literature review, and my considerations resulted in a treatment proposal that was primarily based on treatment philosophy and techniques related to Mehra and Hacke—their publications as well as the lectures and workshops with Hacke.
 
-The alternative “low-pressure table” equipment to be used, the “lamination” adhesives and technique, and the underlying philosophy rested on a new approach that Mehra and Hacke shared to a considerable degree, but not entirely. There were significant differences between the two, and it is interesting to compare Mehra’s statements (treatment options) from 1972 (see [Andersen in this publication](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/paper-21)) and his subsequent publications in the 1970s with Hacke’s statements published during the same decade ([[Hacke 1976]]; [[Hacke 1978]]), and compiled in 1979 ([**fig. 3.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/fig-3-1); [**table 3.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/table-3-1)). The second column of table 3.1 presents a set of options for proper lining treatment that came out of a seminar Hacke held at the School of Conservation in September 1979. The list was compiled by the students based on the seminar and Hacke’s previous publications ({Hacke 1976}; {Hacke 1978}).
+The alternative “low-pressure table” equipment to be used, the “lamination” adhesives and technique, and the underlying philosophy rested on a new approach that Mehra and Hacke shared to a considerable degree, but not entirely. There were significant differences between the two, and it is interesting to compare Mehra’s statements (treatment options) from 1972 (see [Andersen in this publication](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/paper-21)) and his subsequent publications in the 1970s with Hacke’s statements published during the same decade ([[Hacke 1976]]; [[Hacke 1978]]), and compiled in 1979 ([fig. 3.1](#fig-3-1); [**table 3.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/table-3-1)). The second column of table 3.1 presents a set of options for proper lining treatment that came out of a seminar Hacke held at the School of Conservation in September 1979. The list was compiled by the students based on the seminar and Hacke’s previous publications ({Hacke 1976}; {Hacke 1978}).
+
+{% figure 'fig-3-1' %}
 
 In the thesis, both Mehra and Hacke are referred to, but only the Hacke-inspired (unpublished) statement is listed as an appendix to the thesis. In [**table 3.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/table-3-1) the Mehra and the Hacke statements are shown side by side with the original numbering. They appear mostly to agree, although some statements appear in different order and not all appear in both lists. The main difference is probably regarding the use of heat or raised humidity or liquid water in the treatments, along with a difference of opinion as to its consequences. In the main thesis text, I summed up my opinion regarding each of the statements, listing which option I chose to follow in a condition list ([**table 3.2**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/table-3-2)). My condition list was introduced with acknowledgments of the ideal nature of the list and the fact that it would probably not be possible to fulfill all of the options. Likewise, I expected that as the treatment progressed the selection of treatment methods and materials most likely would involve compromises compared with the ideal situation.
 
@@ -79,7 +81,11 @@ As expected, the actual treatment as described in the thesis did not turn out fu
 
 For instance, the application of facing paper with an acrylic solution that had been proposed did not work as planned. At the suggestion of the tutors, it was replaced with use of a thin layer of wax-resin paste applied at a temperature of no more than 45°C. In the end, however (according to the thesis documentation), a temperature of 65°C had to be used to ensure the adhesion of the facing paper—thus compromising the idea of keeping the temperature as low as possible.
 
-Subsequent removal of the previous glue-paste lining went well ([**figs. 3.2**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/fig-3-2) and [**3.3**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/fig-3-3)) and so did the flattening procedure. A humidification chamber setup on the low-pressure table was used, with a tabletop temperature of 35°C and pressure at 50 millibars (mbar). To avoid liquid water in the structure, consolidation was done with an acrylic solution, and after solvent evaporation the consolidant was “activated” by heating the painting on the low-pressure table at 100 mbar and 42°C. The linen lining canvas was coated with a layer of thickened acrylic dispersion, and after a drying period, the dry acrylic layer on the lining canvas and the consolidated painting were activated at 100 mbar and 42°C. After cooling the proper lamination was obtained, basically following directions by Hacke and Ketnath ([[Hacke 1976]]; [[Ketnath 1976]]).
+Subsequent removal of the previous glue-paste lining went well ([figs. 3.2](#fig-3-2) and [3.3](#fig-3-3)) and so did the flattening procedure. A humidification chamber setup on the low-pressure table was used, with a tabletop temperature of 35°C and pressure at 50 millibars (mbar). To avoid liquid water in the structure, consolidation was done with an acrylic solution, and after solvent evaporation the consolidant was “activated” by heating the painting on the low-pressure table at 100 mbar and 42°C. The linen lining canvas was coated with a layer of thickened acrylic dispersion, and after a drying period, the dry acrylic layer on the lining canvas and the consolidated painting were activated at 100 mbar and 42°C. After cooling the proper lamination was obtained, basically following directions by Hacke and Ketnath ([[Hacke 1976]]; [[Ketnath 1976]]).
+
+{% figure 'fig-3-2' %}
+
+{% figure 'fig-3-3' %}
 
 A final, unplanned step in the structural treatment was added at the suggestion of the tutor to remedy a certain canvas structure enhancement and moating—most likely stemming from the previous glue-paste lining. The prescription was a final treatment of the painting, face down on a vacuum hot table at 500 mbar and 42°C. The resulting painting surface after this treatment did not exhibit any canvas structure at all, and the painting was ready for the restoration part of the thesis project. However, neither the facedown treatment nor the 500 mbar pressure was fully in line with the ideas of the planned treatment. Nevertheless, the restoration went well, and in the summer of 1980 I obtained my bachelor’s degree in conservation and went on to the master’s program.
 
@@ -97,7 +103,13 @@ Construction of minisuction equipment was the result of one student thesis durin
 
 Similar new—and even larger—low-pressure tables were designed and built ad hoc for special projects in situ in manor houses or for general use in the Danish conservation studios. Comparable activities took place in many countries, with either in-house designed equipment or commercial suction-tables ([[Reeve 1984]]). The interest in the techniques and equipment (see [Coddington in this publication](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/paper-20)) and the results of the construction and use of suction tables were reported and discussed at conferences such as ICOM-CC, including the 1984 ICOM-CC conference in Copenhagen.
 
-In the following six years, summer schools on the subject were organized at the School of Conservation (in collaboration with ICCROM) to introduce and discuss suction-table techniques and principles and making it possible for numerous participants over the years to try out selected techniques ([**fig. 3.4**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/fig-3-4)). Discussions were lively (**[figs. 3.5](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/fig-3-5)** and [**3.6**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/3-Scharff/fig-3-6)) and included technical and ethical debates on the specific aspects of the techniques and the use of new materials. Such topics included nap-bond acrylic dispersion-adhesives, EVA-based adhesives (e.g., Beva 371), fiberglass cloth, limited interventions, temperature, humidity, strip-linings, loose-linings, and much more. In tune with the prevailing discussions in paintings conservation in general, the idea of how much treatment was really necessary—and if so, what kind—was discussed as well, and Percival-Prescott’s 1974 concept of the lining cycle and whether to treat or not to treat was a regular part of conversations.
+In the following six years, summer schools on the subject were organized at the School of Conservation (in collaboration with ICCROM) to introduce and discuss suction-table techniques and principles and making it possible for numerous participants over the years to try out selected techniques ([fig. 3.4](#fig-3-4)). Discussions were lively ([figs. 3.5](#fig-3-5) and [3.6](#fig-3-6)) and included technical and ethical debates on the specific aspects of the techniques and the use of new materials. Such topics included nap-bond acrylic dispersion-adhesives, EVA-based adhesives (e.g., Beva 371), fiberglass cloth, limited interventions, temperature, humidity, strip-linings, loose-linings, and much more. In tune with the prevailing discussions in paintings conservation in general, the idea of how much treatment was really necessary—and if so, what kind—was discussed as well, and Percival-Prescott’s 1974 concept of the lining cycle and whether to treat or not to treat was a regular part of conversations.
+
+{% figure 'fig-3-4' %}
+
+{% figure 'fig-3-5' %}
+
+{% figure 'fig-3-6' %}
 
 In parallel with the summer schools, a set of visual teaching aids was being produced in collaboration with the Getty Conservation Institute. The aim was to produce step-by-step images of the recently developed lining techniques, along with a detailed description of each step, as a didactic tool for teachers in canvas paintings conservation. The aids were used at each summer school and in regular courses at School of Conservation before being finalized in 1990 ([[Scharff 1995]]).
 
