--- a/content/1-history/5.md
+++ b/content/1-history/5.md
@@ -33,7 +33,9 @@ One of these craftsmen was Giuseppe Maria Ranzenò, known as il Filosofo (the Ph
 
 Other testimonies regarding the activity of the Arazzeria between 1761 and 1768 clarify the specificity of Ranzenò's profession. This information is found in a collection of documents published in 1979 as part of a campaign of wide-ranging research aimed at reconstructing the various and multifaceted artistic activities of the eighteenth century, thanks to a group of historians whose scholarship would come together to give rise to the great *Civiltà del Settecento a Napoli* exhibition in Naples (December 1979–October 1980) ([[N. Spinosa 1979]]; [[*Civiltà del ’700 a Napoli* 1980]]).
 
-In the Reale Arazzeria, several painters, including Girolamo Storace, Giuseppe Bonito, and Orlando Filippini, were engaged to create oil paintings that served as a guide to tapestry weaving ([**figs. 5.1a**](file:///Users/edunigan/GitHub/conserving-canvas/original-text-files/transmittal-files/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/5-Cerasuolo/Cerasuolo/fig-5-1) and [**5.1b**](file:///Users/edunigan/GitHub/conserving-canvas/original-text-files/transmittal-files/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/5-Cerasuolo/Cerasuolo/fig-5-1)). Giuseppe Maria Ranzenò supplied them with prepared canvases on which to make their models, and for this reason in the documents he is called “*mesticatore*” ([[Siniscalco 1979\|, 282]]), from *mestica*, the mixture with which the canvases were prepared for painting. But we also find him at work in other activities closely related to those of the painters active for the Arazzeria, which he assisted with all aspects relating to the preparation of the supports.
+In the Reale Arazzeria, several painters, including Girolamo Storace, Giuseppe Bonito, and Orlando Filippini, were engaged to create oil paintings that served as a guide to tapestry weaving ([fig. 5.1a](#fig-5-1)) and ([fig. 5.1b](#fig-5-1)). Giuseppe Maria Ranzenò supplied them with prepared canvases on which to make their models, and for this reason in the documents he is called “*mesticatore*” ([[Siniscalco 1979\|, 282]]), from *mestica*, the mixture with which the canvases were prepared for painting. But we also find him at work in other activities closely related to those of the painters active for the Arazzeria, which he assisted with all aspects relating to the preparation of the supports.
+
+{% figure 'fig-5-1' %}
 
 A payment note dated 1763 describes the variety of these supplies. It refers to a “canvas for painting made by Giuseppe Maria Ranzenò called the Philosopher, ordered by the Court Painter D. Giuseppe Bonito to make the frieze of the tapestry by the painter Filippini,” and the canvas is described as, “with its good stretcher with the crossbar, prepared with priming the color of lead white” ([[A. Spinosa 1979, 382]]).
 
@@ -75,7 +77,9 @@ For the Real Museo of Naples also, we see that both the lining and the operation
 
 In the middle of the nineteenth century, we meet Francesco Chiariello working for the Real Museo. He was an important person who proudly claimed the rights of the profession of *telaiolo*. Chiariello became very popular among Neapolitan artists of the time, acquiring a singular reputation and importance—so much so that he is remembered by various writers as an authoritative adviser. In the memoirs of the life of the painter Bernardo Celentano, written by his brother Luigi, for example, we find many references to him. Bernardo buys his canvases from Chiariello—indeed in a letter from Rome he considers the possibility of having a large canvas sent from Naples, and we learn the address of his shop, in Via Fosse del Grano, in the neighborhood called Museo. An unusual episode then shows the ease with which Chiariello offers himself to help the novice artist Bernardo in solving a problem of perspective, involving for this purpose a very young Domenico Morelli ([[Cerasuolo 2007\|, 32–33]]).
 
-A lively description by Vittorio Imbriani also allows us to identify the portrait of Francesco Chiariello—called by the diminutive Ciccio—in a gentleman depicted by Giovanni Ponticelli in the historical painting *The Convalescent Cavalier Bajardo*, presented in 1867 in the exhibition *Quinta Promotrice Napoletana* ([**fig. 5.2**](file:///Users/edunigan/GitHub/conserving-canvas/original-text-files/transmittal-files/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/5-Cerasuolo/Cerasuolo/fig-5-2)). Imbriani produced a booklet to accompany the exhibition (which is later cited by the eminent historian and philosopher Benedetto Croce), and it includes a description of the *telaiolo*: “Ciccio Chiariello, the medal-winning *telaiuolo* who supplies canvas to all the painters of Naples, richly disguised as an Italian gentleman of the times, is observing the scene” ([[Cerasuolo 2007\|, 25–26]]).
+A lively description by Vittorio Imbriani also allows us to identify the portrait of Francesco Chiariello—called by the diminutive Ciccio—in a gentleman depicted by Giovanni Ponticelli in the historical painting *The Convalescent Cavalier Bajardo*, presented in 1867 in the exhibition *Quinta Promotrice Napoletana* ([fig. 5.2](#fig-5-2)). Imbriani produced a booklet to accompany the exhibition (which is later cited by the eminent historian and philosopher Benedetto Croce), and it includes a description of the *telaiolo*: “Ciccio Chiariello, the medal-winning *telaiuolo* who supplies canvas to all the painters of Naples, richly disguised as an Italian gentleman of the times, is observing the scene” ([[Cerasuolo 2007\|, 25–26]]).
+
+{% figure 'fig-5-2' %}
 
 The *telaiolo* referred to in the description clearly highlights the characteristics that make his figure singular, in some way unique, in the nineteenth-century Neapolitan artistic scene: he provides canvas on which to paint “to all the painters of Naples,” and he is so highly thought of as to be honored with awards.
 
@@ -87,7 +91,9 @@ In this context, the social elevation of the “craftsman Chiariello” suggests
 
 Francesco was evidently proud of these medals, so much so that in a plea presented to the king to claim his rights as “manufacturer of canvas for painting, and liner of paintings”[^9] he cited the entire text praising him that lay behind his award from the Reale Istituto d’Incoraggiamento. In his plea he asked to be named “Foderatore del Real Museo Borbonico” and claimed as his right—“acquired with great labor”—the exercise of the profession of liner. He also complained that “often restorers”—clearly those who dealt with “artistic” restoration—“allow themselves, to the detriment of art, to put onto canvas paintings that should by rights have been handed to the petitioner.” In addition to the services already offered to the Real Museo, he cited as a credential the “large silver medal” won in the public exhibition.
 
-Francesco Chiariello’s familiarity and friendship with Neapolitan artists—foremost among these Domenico Morelli and Giuseppe Palizzi—will be testified to, at a much later date, by the certificates his son Pasquale obtained in order to promote the elevation in his social status. This enterprising son, in fact, succeeded in obtaining a further prestigious award from King Vittorio Emanuele III in 1901: the concession to “display the Royal Crest on the sign of his studio,” which together with the medals won in public exhibitions will prominently feature on his letterhead (see [**fig. 5.3**](file:///Users/edunigan/GitHub/conserving-canvas/original-text-files/transmittal-files/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/5-Cerasuolo/Cerasuolo/fig-5-3)).
+Francesco Chiariello’s familiarity and friendship with Neapolitan artists—foremost among these Domenico Morelli and Giuseppe Palizzi—will be testified to, at a much later date, by the certificates his son Pasquale obtained in order to promote the elevation in his social status. This enterprising son, in fact, succeeded in obtaining a further prestigious award from King Vittorio Emanuele III in 1901: the concession to “display the Royal Crest on the sign of his studio,” which together with the medals won in public exhibitions will prominently feature on his letterhead (see ([fig. 5.3](#fig-5-3))).
+
+{% figure 'fig-5-3' %}
 
 Permission to display the royal crest was gained thanks to an impressive list of accolades by the best-known artists and scholars of the time. Reference letters were signed between 1896 and 1900 by Domenico Morelli, Filippo Palizzi, Giulio De Petra, Vittorio Spinazzola, and Vincenzo Caprile; a group of professors from the Royal Institute of Fine Arts signed a collective document that reads, “for a long time . . . the paintings in need of lining or restorations are entrusted exclusively to him either at the Real Istituto di Belle Arti or by the Museo Nazionale, the Museo di San Martino, and the Pinacoteca Reale of Naples.”[^10]
 
@@ -97,11 +103,17 @@ The emphasis is therefore placed on a direct relationship between the guarantee 
 
 ## Knowledge of Materials and Careful Interventions
 
-To great expertise in the practice of lining, Neapolitan liners added a profound knowledge of the materials of painting, which during the nineteenth century advised extreme caution in interventions. We have found evidence—both material and documentary—of interesting interventions in the case of two glue-tempera paintings: Parmigianino’s *Holy Family,* and Bertoja’s *Virgin and Child* ([**figs. 5.4**](file:///Users/edunigan/GitHub/conserving-canvas/original-text-files/transmittal-files/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/5-Cerasuolo/Cerasuolo/fig-5-4) and [**5.5**](file:///Users/edunigan/GitHub/conserving-canvas/original-text-files/transmittal-files/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/5-Cerasuolo/Cerasuolo/fig-5-5), respectively) ([[Cardinali et al. 2002]]). Both interventions are notable in their sensitive attention to the behavior of the materials involved. In these two beautiful canvases, the rare qualities provided by the medium have been preserved thanks to the care taken, which ensured their good conservation, and which is still effective today.
+To great expertise in the practice of lining, Neapolitan liners added a profound knowledge of the materials of painting, which during the nineteenth century advised extreme caution in interventions. We have found evidence—both material and documentary—of interesting interventions in the case of two glue-tempera paintings: Parmigianino’s *Holy Family,* and Bertoja’s *Virgin and Child* ([figs. 5.4](#fig-5-4) and [5.5](#fig-5-5)), respectively) ([[Cardinali et al. 2002]]). Both interventions are notable in their sensitive attention to the behavior of the materials involved. In these two beautiful canvases, the rare qualities provided by the medium have been preserved thanks to the care taken, which ensured their good conservation, and which is still effective today.
+
+{% figure 'fig-5-4' %}
+
+{% figure 'fig-5-5' %}
 
 A document signed by the restorer Pasquale Chiariello dated September 6, 1899, lists the “lining works” he carried out in the National Museum of Naples. In the same list it is specified that the paintings defined as *guazzi* (glue-tempera paintings) “were only put behind glass and ‘conditioned’ in order to avoid further damage.”[^12]
 
-The examination of the paintings revealed that the canvases of the Bertoja and of the Parmigianino were not lined but equipped with an additional canvas: both have been “conditioned” in a similar way: using a densely woven fabric, not glued, but only stretched on the reverse for protective purposes, and fixed to the edges with nails that also tension the original canvas ([**fig. 5.6**](file:///Users/edunigan/GitHub/conserving-canvas/original-text-files/transmittal-files/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/5-Cerasuolo/Cerasuolo/fig-5-6)).
+The examination of the paintings revealed that the canvases of the Bertoja and of the Parmigianino were not lined but equipped with an additional canvas: both have been “conditioned” in a similar way: using a densely woven fabric, not glued, but only stretched on the reverse for protective purposes, and fixed to the edges with nails that also tension the original canvas ([fig. 5.6](#fig-5-6)).
+
+{% figure 'fig-5-6' %}
 
 The edges of the canvases were fixed with strips of wood nailed along the perimeter to the stretcher and then wrapped with a glued paper. The stretchers, from different and unspecified periods—that of the Parmigianino is older and could be original—are of the fixed type.
 
@@ -117,7 +129,9 @@ Another important aspect of the caution shown by the museum administration conce
 
 The practice of transfer was carried out very early in Naples, since at least the eighteenth century. In 1742, Bernardo De Dominici recounted the skill of two Neapolitan artists, Nicolò di Simone and Alessandro Majello, who specialized in the transfer of flaking paintings on panel onto canvas supports ([[De Dominici \[1742–43\] 2003–14\|, 796, 994]], cited in [[Conti 2007\|, 140]]).
 
-The restoration of a painting by Fedele Fischetti, *Noli Me Tangere*, from the church of Santa Caterina da Siena ([**fig. 5.7a**](file:///Users/edunigan/GitHub/conserving-canvas/original-text-files/transmittal-files/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/5-Cerasuolo/Cerasuolo/fig-5-7)), in 1998,[^13] enabled us to examine a material example of a partial transfer procedure, probably carried out by the artist himself during the execution of the painting, which can be traced back to 1766–1767. There are documents that refer to Fischetti’s activity as a restorer ([[Nappi 1984\|, 320]]), but in this case it was possible to verify the procedure carried out long ago directly on a painting.
+The restoration of a painting by Fedele Fischetti, *Noli Me Tangere*, from the church of Santa Caterina da Siena ([fig. 5.7a](#fig-5-7)), in 1998,[^13] enabled us to examine a material example of a partial transfer procedure, probably carried out by the artist himself during the execution of the painting, which can be traced back to 1766–1767. There are documents that refer to Fischetti’s activity as a restorer ([[Nappi 1984\|, 320]]), but in this case it was possible to verify the procedure carried out long ago directly on a painting.
+
+{% figure 'fig-5-7' %}
 
 Observation in raking light before restoration showed a clear difference in the surface of the whole lower part of the painting, which was smoother and more adherent to the canvas, while in the upper part, lifting of the poorly adhering paint layers was visible.
 
@@ -125,7 +139,7 @@ The painting appeared to have been lined a long time ago, and the adhesion of th
 
 Evidently—probably following an accident—the painter had needed to restore his own painting, which was adhering poorly to the canvas. He had then removed the canvas from the affected part and glued to it a new canvas of a very similar weave to the original, while throughout the lower part he had continued the gluing over the earlier canvas, where it had not been necessary to remove it.
 
-The fact that the intervention had been carried out by the artist himself is deduced from the nature of the canvas and from the fact that the gaps in the upper part are filled with an oily mixture quite similar to the original, applied from the back—underneath the lining canvas—and the color applied on the front over these fillings is similar to the original in the handling of the brushstrokes and color scheme, but slightly obscured in these areas. [**Fig. 5.7b**](file:///Users/edunigan/GitHub/conserving-canvas/original-text-files/transmittal-files/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/5-Cerasuolo/Cerasuolo/fig-5-7) shows the areas affected by these “integrations.”
+The fact that the intervention had been carried out by the artist himself is deduced from the nature of the canvas and from the fact that the gaps in the upper part are filled with an oily mixture quite similar to the original, applied from the back—underneath the lining canvas—and the color applied on the front over these fillings is similar to the original in the handling of the brushstrokes and color scheme, but slightly obscured in these areas. [fig. 5.7b](#fig-5-7)) shows the areas affected by these “integrations.”
 
 The practice of transfer—often claimed by restorers to be a secret capable of saving deteriorated paintings—causes more problems than it solves, as is now well understood. Although in the nineteenth century it was banned during restoration in the Real Museo Borbonico, it was unfortunately no longer avoided in the early twentieth century. In the years leading up to the 1960s, the transfer of easel paintings was considered a way of giving paintings greater durability (much like the *strappo* technique used with frescoes), so much so that it was also approved by rigorous ministerial circulars, and indeed it was practiced repeatedly, with questionable results. If the operation could have been carried out without very serious consequences for Neapolitan seventeenth-century paintings, which are characterized by remarkably thick and compact preparatory layers—(although even there it actually impoverished the paint layer and its texture), in other cases the consequences of these interventions were truly deleterious. This was the case with Titian’s *Paolo III col Camauro.* Titian famously painted directly onto lightly prepared canvas, and *Paolo III* was seriously damaged by the transfer carried out by Stanislao Troiano in 1932 ([[A. Cerasuolo 2013\|, 197]]).
 
