--- a/content/1-history/6.md
+++ b/content/1-history/6.md
@@ -69,7 +69,19 @@ Following international trends, in the 1990s, the Russian conservation community
 
 The method employs an acrylic adhesive with the trade name A-45-K, which is a copolymer of vinyl acetate, butyl acrylate, and acrylic acid in ethyl acetate ({Emelyanov 2004}). In a form of either a dispersion or acetone solution, it can be brushed or sprayed on a lining cloth and later activated by temperature ([[Semechkina 1993\|, 125]]). Its properties are in many ways similar to Plextol and Lascaux adhesives, but choosing a local manufacturer was preferred in the 1970s, not only to support the country’s economy but also because this particular material was well-known and tested. A-45-K has not become very popular for standard lining procedures for canvases, but it showed good results in a few specific case studies.
 
-One example is the lining support of the eighteenth century painting *Conclusions of Field Marshall General Count B. H. Minikh on the Seizure of Ochakov*” ([**figs. 6.1a and b**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/6-Yurovetsksya/fig-6-1)) ([[Iurovetskaia et al. 2019]]). Silk was used as a support ([**fig. 6.2**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/6-Yurovetsksya/fig-6-2)), and the image layer combined oil, gold paint, and ink. Adhesive A-45-K dissolved in acetone was sprayed on the surface of the lining cloth ([**fig. 6.3**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/6-Yurovetsksya/fig-6-3)) and after matching with the original support was activated locally by heat ([**figs. 6.4a and b**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/6-Yurovetsksya/fig-6-4)). Effective application of A-45-K for this art piece still has not led to widespread adoption of this technique among professional conservators because, since 2006, when this method was first introduced for lining the Mikhail Vrubel painting *Gwydon* on a sackcloth support, it has become increasingly complicated to buy the material from the manufacturers.
+One example is the lining support of the eighteenth century painting *Conclusions of Field Marshall General Count B. H. Minikh on the Seizure of Ochakov*” ([figs. 6.1a](#fig-6-1-a) and [6.1b](#fig-6-1-b)) ([[Iurovetskaia et al. 2019]]). Silk was used as a support ([fig. 6.2](#fig-6-2)), and the image layer combined oil, gold paint, and ink. Adhesive A-45-K dissolved in acetone was sprayed on the surface of the lining cloth ([fig. 6.3](#fig-6-3)) and after matching with the original support was activated locally by heat ([figs. 6.4a](#fig-6-4-a) and [6.4b](#fig-6-4-b)). Effective application of A-45-K for this art piece still has not led to widespread adoption of this technique among professional conservators because, since 2006, when this method was first introduced for lining the Mikhail Vrubel painting *Gwydon* on a sackcloth support, it has become increasingly complicated to buy the material from the manufacturers.
+
+{% figure 'fig-6-1-a' %}
+
+{% figure 'fig-6-1-b' %}
+
+{% figure 'fig-6-2' %}
+
+{% figure 'fig-6-3' %}
+
+{% figure 'fig-6-4-a' %}
+
+{% figure 'fig-6-4-b' %}
 
 Nowadays, restoration professionals in Russia often face difficulty accessing materials adapted for conservation purposes in our country and thus turn to reliable professional materials by internationally known suppliers. In this way, the conservation field in Russia is experiencing globalization, with all its challenges and opportunities, and mostly sticking to materials and techniques that are used worldwide. This certainly makes our work more comfortable, but it also eliminates distinctions between different conservation schools with their unique methods and approaches.
 
